@startuml

skinparam classAttributeIconSize 0

class Extractor {
  - http_client : HTTPClient
  - current_data : JSON
  - endpoint : String
  + extract(http_client : HTTPClient, endpoint : String) : JSON


}

class HTTPClient {
  + get(endpoint: String, params: Hash, headers: Hash, timeout: Integer) : JSON
  - make_request(uri: URI, request: Net::HTTP::Get) : Net::HTTPResponse
  - handle_response(response: Net::HTTPResponse) : JSON
}

class S3Client {
  - s3 : Aws::S3::Client
  + upload_file(file: String, bucket: String, object_key: String) : void
  + list_files(bucket: String) : Array
  + delete_file(bucket: String, object_key: String) : void
  + get_file(bucket: String, object_key: String) : String
  + generate_presigned_url(bucket: String, object_key: String, expiration: Integer = 3600) : String
}

Interface StorageProvider {
  + upload_file(file: String, bucket: String, object_key: String)
  + list_files(bucket: String)
  + delete_file(bucket: String, object_key: String)
}

class CacheManager {
  - storage_provider : StorageProvider
  - bucket : String
  + update_json_db(uuid: String, endpoint: String) : void
  + upload_json_data(uuid: String, endpoint: String, data: JSON, date: Date) : void
  + search_json_db(query: String, date: Date = Date.today) : JSON
  + generate_signed_url(uuid: String) : String
  - retrieve_json_db() : JSON
  - upload_json_db(json_db: JSON) : void
}

Exception MaxRetriesReachedError {}

Extractor ..> HTTPClient
Extractor ..> MaxRetriesReachedError

S3Client --|> StorageProvider
CacheManager ..> StorageProvider

note as N1
  Title: Updated Class Diagram
  Date: 23.01.2025
  Authors: Benoît Pierrehumbert & Philippe Moeckli
end note

@enduml
